# cogip-tools

./: .gitignore  .pre-commit-config.yaml  .qmlformat.ini  .qmllint.ini  404.html  CMakeLists.txt  Dockerfile  docker-compose.yml  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: build-wheel.yml  code-quality-workflow.yml  mkdocs-build.yml  mkdocs-deploy.yml
assets/: pami2025.dae  pami2025.stl  robot2025.dae  robot2025.stl  table2025.dae
cogip/cpp/: CMakeLists.txt
cogip/cpp/avoidance/: avoidance.pyx
cogip/cpp/drivers/: CMakeLists.txt
cogip/cpp/drivers/lidar_ld19/: CMakeLists.txt  binding.cpp  ldlidar_driver.cpp  ldlidar_protocol.cpp
cogip/cpp/drivers/lidar_ld19/include/lidar_ld19/: ldlidar_datatype.h  ldlidar_driver.h  ldlidar_protocol.h
cogip/cpp/drivers/ydlidar_g2/: CMakeLists.txt  YDLidar.cpp  YDLidarDriver.cpp  binding.cpp  timer.cpp
cogip/cpp/drivers/ydlidar_g2/include/ydlidar_g2/: YDLidar.h  YDLidarDriver.h  locker.h  thread.h  timer.h  ydlidar_protocol.h
cogip/cpp/examples/: CMakeLists.txt
cogip/cpp/examples/logger_example/: CMakeLists.txt  binding.cpp  logger_example.cpp
cogip/cpp/examples/logger_example/include/logger_example/: logger_example.hpp
cogip/cpp/examples/nanobind_example/: CMakeLists.txt
cogip/cpp/libraries/: CMakeLists.txt
cogip/cpp/libraries/logger/: CMakeLists.txt  PythonLogger.cpp  binding.cpp
cogip/cpp/libraries/logger/include/logger/: LogLevel.hpp  Logger.hpp  PythonLogger.hpp
cogip/cpp/libraries/models/: CMakeLists.txt  Circle.cpp  CircleList.cpp  Coords.cpp  CoordsList.cpp  Polar.cpp  Pose.cpp  PoseBuffer.cpp  PoseOrder.cpp  PoseOrderList.cpp  binding.cpp
cogip/cpp/libraries/models/include/models/: Circle.hpp  CircleList.hpp  Coords.hpp  CoordsList.hpp  List.hpp  Polar.hpp  Pose.hpp  PoseBuffer.hpp  PoseOrder.hpp  PoseOrderList.hpp  binding.hpp  circle.hpp  circle_list.hpp  coords.hpp  coords_list.hpp  polar.hpp  pose.hpp  pose_buffer.hpp  pose_order.hpp  pose_order_list.hpp
cogip/cpp/libraries/obstacles/: CMakeLists.txt  ObstacleCircle.cpp  ObstaclePolygon.cpp  ObstacleRectangle.cpp  binding.cpp
cogip/cpp/libraries/obstacles/include/obstacles/: Obstacle.hpp  ObstacleCircle.hpp  ObstacleCircleList.hpp  ObstaclePolygon.hpp  ObstaclePolygonList.hpp  ObstacleRectangle.hpp  ObstacleRectangleList.hpp  obstacle_circle.hpp  obstacle_circle_list.hpp  obstacle_polygon.hpp  obstacle_polygon_list.hpp
cogip/cpp/libraries/shared_memory/: CMakeLists.txt  SharedMemory.cpp  WritePriorityLock.cpp  binding.cpp
cogip/cpp/libraries/shared_memory/include/shared_memory/: SharedMemory.hpp  WritePriorityLock.hpp  shared_data.hpp  shared_properties.hpp
cogip/cpp/libraries/utils/: CMakeLists.txt  LidarDataConverter.cpp  binding.cpp
cogip/cpp/libraries/utils/include/utils/: LidarDataConverter.hpp  trigonometry.hpp
cogip/entities/: artifacts.py  dynobstacle.py  obstacle.py  path.py  robot.py  robot_manual.py  sensor.py  table.py
cogip/models/: __init__.py  actuators.py  artifacts.py  firmware_parameter.py  firmware_telemetry.py  models.py  odometry_calibration.py  otos_calibration.py  telemetry_graph.py
cogip/protobuf/: PB_Actuators.proto  PB_Actuators_pb2.py  PB_Actuators_pb2.pyi  PB_Controller_pb2.py  PB_Controller_pb2.pyi  PB_Coords_pb2.py  PB_Coords_pb2.pyi  PB_EmergencyStop.proto  PB_EmergencyStop_pb2.py  PB_ParameterCommands.proto  PB_ParameterCommands_pb2.py  PB_ParameterCommands_pb2.pyi  PB_PathPose_pb2.py  PB_PathPose_pb2.pyi  PB_Pid.proto  PB_PidEnum_pb2.py  PB_PidEnum_pb2.pyi  PB_Pid_pb2.py  PB_Pid_pb2.pyi  PB_Polar_pb2.py  PB_Polar_pb2.pyi  PB_Pose_pb2.py  PB_Pose_pb2.pyi  PB_PowerSupply.proto  PB_PowerSupply_pb2.py  PB_PowerSupply_pb2.pyi  PB_SpeedOrder.proto  PB_SpeedOrder_pb2.py  PB_SpeedOrder_pb2.pyi  PB_State_pb2.py  PB_State_pb2.pyi  PB_Telemetry.proto  PB_Telemetry_pb2.py  PB_Telemetry_pb2.pyi  __init__.py
cogip/scservo_async_sdk/: __init__.py  constants.py  driver.py  protocol.py  servo.py
cogip/scservo_sdk/: __init__.py  group_sync_read.py  group_sync_write.py  port_handler.py  protocol_packet_handler.py  scscl.py  sms_sts.py
cogip/tools/beaconcam/: codecs.py
cogip/tools/camera/: __init__.py  __main__.py  arguments.py  calibrate.py  camera.py  capture.py  charuco.py  detect.py  focus.py  info.py  utils.py
cogip/tools/cansend/: __main__.py
cogip/tools/copilot/: __init__.py  controller.py  copilot.py  pbcom.py  sio_events.py
cogip/tools/cpp_cython_example/: __main__.py
cogip/tools/cpp_logger_example/: __init__.py  __main__.py
cogip/tools/cpp_nanobind_example/: __main__.py
cogip/tools/cpp_shm_example/: __main__.py
cogip/tools/dashboard/: __init__.py  __main__.py  dashboard.py
cogip/tools/dashboard_beacon/: __main__.py
cogip/tools/detector/: __init__.py  __main__.py  check_lidar_status.py  detector.py  gui.py  properties.py  sio_events.py  web.py
cogip/tools/detector_pami/: __main__.py  detector.py  properties.py
cogip/utils/: argenum.py  asyncloop.py  console_ui.py  fnv1a.py  logger.py  mock.py  threadloop.py
cogip/widgets/: gameview.py  properties.py  wizard.py
developers/dashboard/: index.html
developers/developers/: index.html
docs/: install.md
docs/developers/: dashboard.md
docs/usage/: camera.md  cansend.md  dashboard.md  detector.md  monitor.md  planner.md  server.md
install/: index.html
raspios/: Dockerfile.base  Dockerfile.customize  README.md  common.sh  config-common.env  config-cup.env  config-dev.env  index.html  stage1_customize_image.sh  stage2_create_image.sh  stage3_flash_image.sh
reference/SUMMARY/: index.html
search/: search_index.json
usage/beaconcam/: index.html
usage/camera/: index.html
usage/cansend/: index.html
usage/copilot/: index.html
usage/dashboard/: index.html
usage/dashboard_beacon/: index.html
usage/detector/: index.html
usage/lidarusb/: index.html
usage/monitor/: index.html
usage/planner/: index.html
usage/replay/: index.html
usage/robotcam/: index.html
usage/server/: index.html
usage/server_beacon/: index.html
(+756 files in other folders)
