[build-system]
requires = ["scikit-build-core", "cython", "cython-cmake", "nanobind~=2.9.0"]
build-backend = "scikit_build_core.build"

[project]
name = "cogip-tools"
authors = [{name = "COGIP Team", email = "cogip35@gmail.com"}]
version = "1.0.0"
requires-python = ">=3.13"
license = {file = "LICENSE"}
dependencies = [
    "aiohttp==3.10.10",
    "aioserial==1.3.1",
    "cython~=3.0.11",
    "cython-cmake~=0.2.1",
    "devtools==0.12.2",
    "fastapi==0.115.2",
    "getch~=1.0",
    "gpiozero==2.0.1",
    "httpx==0.26.0",
    "Jinja2==3.1.2",
    "lgpio~=0.2.2.0",
    "linuxpy~=0.23.0",
    "luma.oled==3.13.0",
    "matplotlib~=3.9.3",
    "more_itertools==10.1.0",
    "nanobind~=2.9.0",
    "numpy>=2",
    "opencv-contrib-python~=4.12.0.88",
    "opencv-python~=4.12.0.88",
    "picamera2~=0.3.31",
    "polling2==0.5.0",
    "protobuf==5.29.5",
    "pydantic==2.9.2",
    "pydantic_settings==2.5.2",
    "pyserial==3.5",
    "py-spy==0.4.1",
    "python-can==4.6.1",
    "python-dotenv==1.0.0",
    "python-engineio==4.8.0",
    "python-socketio==5.10.0",
    "requests==2.31.0",
    "sentry-sdk==1.39.1",
    "shapely~=2.1",
    "systemd-python==235",
    "toposort==1.10",
    "typer==0.20.0",
    "uvicorn[standard]==0.24.0.post1",
    "scikit-learn~=1.6.1",
    "watchfiles==0.24.0",
    "websocket-client==1.7.0",
    "rich==14.2.0",
]

[dependency-groups]
dev = [
    "MarkupSafe==2.1.3",
    "mkdocs==1.6.1",
    "mkdocs-gen-files==0.6.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.7.0",
    "mkdocstrings[python]==1.0.0",
    "pre-commit==4.0.1",
    "pymdown-extensions==10.18",
    "PySide6==6.10.0",
    "ruff==0.14.0",
    "toposort==1.10"
]

[project.urls]
Documentation = "https://cogip.github.io/cogip-tools"
Repository = "https://github.com/cogip/cogip-tools.git"

[project.scripts]
cogip-monitor = "cogip.tools.monitor.main:main"
cogip-copilot = "cogip.tools.copilot.__main__:main"
cogip-detector = "cogip.tools.detector.__main__:main"
cogip-planner = "cogip.tools.planner.__main__:main"
cogip-beaconcam = "cogip.tools.beaconcam.main:main"
cogip-robotcam = "cogip.tools.robotcam.main:main"
cogip-server = "cogip.tools.server.__main__:main"
cogip-dashboard = "cogip.tools.dashboard.__main__:main"
cogip-camera = "cogip.tools.camera.__main__:main"
cogip-server-beacon = "cogip.tools.server_beacon.__main__:main"
cogip-cansend = "cogip.tools.cansend.__main__:main"
cogip-cpp-cython-example = "cogip.tools.cpp_cython_example.__main__:main"
cogip-cpp-logger-example = "cogip.tools.cpp_logger_example.__main__:main"
cogip-cpp-nanobind-example = "cogip.tools.cpp_nanobind_example.__main__:main"
cogip-lidar-ld19 = "cogip.tools.lidar_ld19.__main__:main"
cogip-ydlidar-g2 = "cogip.tools.ydlidar_g2.__main__:main"
cogip-cpp-shm-example = "cogip.tools.cpp_shm_example.__main__:main"
cogip-scservo = "cogip.tools.scservo.__main__:main"
cogip-mcu-logger = "cogip.tools.mcu_logger.__main__:main"
cogip-firmware-parameter-manager = "cogip.tools.firmware_parameter_manager.__main__:main"
cogip-firmware-telemetry = "cogip.tools.firmware_telemetry.__main__:main"
cogip-odometry-calibration = "cogip.tools.firmware_odometry_calibration.__main__:main"

[tool.uv]
python-preference = "only-managed"

[tool.scikit-build]
logging.level = "DEBUG"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp313"
build.verbose = true
editable.verbose = true
install.strip = false
cmake.version = "==4.0"
cmake.build-type = "Release" # Can be Debug, Release, MinSizeRel, RelWithDebInfo
wheel.packages = ["cogip"]
wheel.exclude = [
    "*.pyx",
    "*.cpp",
    "*.proto",
]
sdist.exclude = [
    "assets",
    "docker-compose.yml",
    "Dockerfile",
    "docs",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".gitmodules",
    "Makefile",
    "mkdocs.yml",
    "PKG-INFO",
    ".pre-commit-config.yaml",
    "raspios",
    "submodules",
]
sdist.include = [
    "submodules/mcu-firmware/**/*.proto"
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "submodules",
    "tests",
    "doc",
    "cogip/protobuf",
    "cogip/scservo_sdk",
]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint.isort]
no-lines-before = ["future", "standard-library", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
